--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: PCL
 Title: Pattern Completetion Learning model
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: person("Will", "Hopper", email = "whopper@psych.umass.edu", role = c("aut", "cre"))
 Description: Implements the core model logic of pattern completion learning, as applied to the testing effect 
 Depends: R (>= 3.0.0)
 License: CC0
 LazyData: true
 VignetteBuilder: knitr
-Suggests: knitr
+Suggests: knitr,
+    testthat
