--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: PCL
 Title: Pattern Completetion Learning model
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Authors@R: person("Will", "Hopper", email = "whopper@psych.umass.edu", role = c("aut", "cre"))
 Description: Implements the core model logic of pattern completion learning, as applied to the testing effect 
 Depends: R (>= 3.0.0)
 License: CC0
 LazyData: true
 VignetteBuilder: knitr
-Suggests: knitr,
-    testthat
+Suggests: knitr,  testthat
