--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 0.0.0.9003
 Authors@R: person("Will", "Hopper", email = "whopper@psych.umass.edu", role = c("aut", "cre"))
 Description: Implements the core model logic of pattern completion learning, as applied to the testing effect 
 Depends: R (>= 3.0.0)
+Imports: whoppeR (>= 0.0.0.9004)
 License: CC0
 LazyData: true
 VignetteBuilder: knitr
