Name Change! PCL --> PCR, Primary and Convergent Retreival Model

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: PCL
-Title: Pattern Completetion Learning model
-Version: 0.0.0.9005
+Package: PCR
+Title: Primary and Convergent Retreival model
+Version: 0.1.0.9000
 Authors@R: person("Will", "Hopper", email = "whopper@psych.umass.edu", role = c("aut", "cre"))
 Description: Implements the core model logic of pattern completion learning, as applied to the testing effect 
 Depends: R (>= 3.0.0)
