--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(checkRequiredParams)
 export(cuedRecall)
+export(forget_beta)
+export(forget_binomial)
 export(freeRecall)
 export(paramBounds)
 export(study)
