--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,17 @@ Package: PCR
 Title: Primary and Convergent Retreival model
 Version: 0.1.1.9001
 Authors@R: person("Will", "Hopper", email = "whopper@psych.umass.edu", role = c("aut", "cre"))
-Description: Implements the core model logic of pattern completion learning, as applied to the testing effect
-Depends: R (>= 3.0.0)
-Imports: dplyr(>= 0.4.0), whoppeR (>= 0.0.0.9009)
+Description: Implements the core model logic of pattern completion learning, as
+    applied to the testing effect
+Depends:
+    R (>= 3.0.0)
+Imports:
+    dplyr(>= 0.4.0),
+    whoppeR (>= 0.0.0.9009)
 License: CC0
 LazyData: true
 VignetteBuilder: knitr
-Suggests: knitr,  testthat
+Suggests:
+    knitr,
+    testthat
+RoxygenNote: 5.0.1
