First draft of a PCR summary method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(forget,PCRbinomial)
 S3method(study,PCRbeta)
 S3method(study,PCRbinomial)
 S3method(study,PCRparams)
+S3method(summary,PCR)
 export(CRlearning)
 export(PRlearning)
 export(checkRequiredParams)
