refactor to use closures for PRlearning and CRlearnings, which are methods determined whe the time the PCRparams object is created or updated with new parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ S3method(CRlearning,PCRbeta)
 S3method(CRlearning,PCRbinomial)
 S3method(PRlearning,PCRbeta)
 S3method(PRlearning,PCRbinomial)
+S3method(cuedRecall,PCR)
+S3method(cuedRecall,default)
+S3method(cuedRecall,timed)
 S3method(forget,PCRbeta)
 S3method(forget,PCRbinomial)
-S3method(study,PCRbeta)
-S3method(study,PCRbinomial)
+S3method(study,PCR)
 S3method(study,PCRparams)
 S3method(summary,PCR)
 export(CRlearning)
