refactored forgetting methods to use same technique as study and test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,7 @@
 S3method(cuedRecall,PCR)
 S3method(cuedRecall,default)
 S3method(cuedRecall,timed)
-S3method(forget,PCRbeta)
-S3method(forget,PCRbinomial)
+S3method(forget,PCR)
 S3method(study,PCR)
 S3method(study,PCRparams)
 S3method(summary,PCR)
