--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: PCR
 Title: Primary and Convergent Retreival model
-Version: 0.1.1.9001
+Version: 1.0
 Authors@R: person("Will", "Hopper", email = "whopper@psych.umass.edu", role = c("aut", "cre"))
 Description: Implements the core model logic of pattern completion learning, as
     applied to the testing effect
 Depends:
-    R (>= 3.0.0)
+    R (>= 3.1.0)
 Imports:
-    dplyr(>= 0.4.0),
     whoppeR (>= 0.0.0.9009)
 License: CC0
 LazyData: true
 VignetteBuilder: knitr
 Suggests:
     knitr,
+    dplyr,
     testthat
 RoxygenNote: 5.0.1
