renamed "initPCRparams" function to initPCR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(forget)
 export(freeRecall)
 export(freeRecall.PCR)
 export(freeRecall.timed)
-export(initPCRparams)
+export(initPCR)
 export(paramBounds)
 export(study)
 export(updatePCRparams)
