Store raw model RT's in the summary as elements of a list column in a tbl_df
no practice is recorded as "none" instead of "control"

Bumped version to 1.0.1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,5 @@ export(initPCR)
 export(paramBounds)
 export(study)
 export(updatePCRparams)
+importFrom(dplyr,tbl_df)
 importFrom(whoppeR,betaParams)
