--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(forget,PCR)
 S3method(study,PCR)
 S3method(study,PCRparams)
 S3method(summary,PCR)
+S3method(update,PCRparams)
 export(checkRequiredParams)
 export(cuedRecall)
 export(forget)
@@ -16,6 +17,5 @@ export(freeRecall.timed)
 export(initPCR)
 export(paramBounds)
 export(study)
-export(updatePCRparams)
 importFrom(dplyr,tbl_df)
 importFrom(whoppeR,betaParams)
