Added thresh_change function to allow fluctions in thresholds between tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(freeRecall.timed)
 export(initPCR)
 export(paramBounds)
 export(study)
+export(thresh_change)
 importFrom(dplyr,tbl_df)
 importFrom(whoppeR,betaParams)
