First draft of PCR model implemented with a R6 class.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(study,PCR)
 S3method(study,PCRparams)
 S3method(summary,PCR)
 S3method(update,PCRparams)
+export(PCR)
 export(checkRequiredParams)
 export(cuedRecall)
 export(forget)
@@ -18,5 +19,7 @@ export(initPCR)
 export(paramBounds)
 export(study)
 export(thresh_change)
+import(R6)
+import(parameters)
 importFrom(dplyr,tbl_df)
 importFrom(whoppeR,betaParams)
