Wrote generic function for extracting the observed recall accuracy for each simulated list from each test for each cue.
Returns a data.frame with 4 columns: cue, test, N_correct, and proportion correct

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(study,PCR)
 S3method(study,PCRparams)
 S3method(summary,PCR)
 S3method(update,PCRparams)
+export(N_Recalled)
 export(PCR)
 export(checkRequiredParams)
 export(cuedRecall)
@@ -21,5 +22,11 @@ export(study)
 export(thresh_change)
 import(R6)
 import(parameters)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,mutate)
 importFrom(dplyr,tbl_df)
+importFrom(magrittr,"%>%")
+importFrom(readr,parse_number)
+importFrom(tibble,as_tibble)
+importFrom(tidyr,gather_)
 importFrom(whoppeR,betaParams)
