Wrote method for extacting observed reaction times from PCR objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,15 +18,22 @@ export(freeRecall.PCR)
 export(freeRecall.timed)
 export(initPCR)
 export(paramBounds)
+export(reaction_times)
 export(study)
 export(thresh_change)
 import(R6)
 import(parameters)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,tbl_df)
 importFrom(magrittr,"%>%")
+importFrom(purrr,map2_df)
 importFrom(readr,parse_number)
 importFrom(tibble,as_tibble)
+importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather_)
 importFrom(whoppeR,betaParams)
